add book 4, standardize directory structure

--- a/src/economic-democracy/08.md
+++ b/src/economic-democracy/08.md
@@ -4,7 +4,7 @@ Admitting, then, that any decentralised scheme of society must first justify its
 
 The starting point is clearly a reasonably uniform and plentiful distribution of simple necessaries; food, clothes, housing, etc.
 
-Now the actual production of these articles presents no difficulties .whatever. Notwithstanding the diversion of the major portion of the world's energy for four years to purposes of destruction, the actual economic want in the world has been almost entirely artificial, *i.e.*, has been confined either to countries effectively blockaded, or else lacking the mechanical facilities for effective distribution. In fact, it is most significant that while useful (in a peace sense) production has been enormously reduced in Great Britain during the war, the standard of comfort has been more uniformly high than ever before.
+Now the actual production of these articles presents no difficulties whatever. Notwithstanding the diversion of the major portion of the world's energy for four years to purposes of destruction, the actual economic want in the world has been almost entirely artificial, *i.e.*, has been confined either to countries effectively blockaded, or else lacking the mechanical facilities for effective distribution. In fact, it is most significant that while useful (in a peace sense) production has been enormously reduced in Great Britain during the war, the standard of comfort has been more uniformly high than ever before.
 
 The explanation of this is simple: The payments made in wages have increased, prices and the production of luxuries have been partly controlled, and sabotage has disposed of useless product, and so kept up wage distribution.
 
