--- a/src/economic-democracy/10.md
+++ b/src/economic-democracy/10.md
@@ -24,7 +24,7 @@ Let us now introduce into the transactions a document we may call a retail clear
 
 Let us now apply this to our example of such a staple as the supply of boots.
 
-Let us assume that in a given credit area the sum involved in the delivery of boots to the user per month amounts to ,£2,500, that is to say, the *cost* figures of the retail invoices turned into the Clearing-house per month total that sum. This means that services have been rendered and remunerated by the payment over an indefinite period of the token value of £2,500, and the product of these services distributed in one month. But the token value has a general purchasing power, consequently, it should be set against a general value. The general value is equal to the general rate of depreciation, or if it be preferred, consumption of the whole of the goods which can be bought with the token value. Let us assume this to be 40 per cent., that is to say, let us imagine that of the total work of the community for one month 60 per cent, remains for use during a subsequent period. Then the selling price of a pair of boots would be equal to 40 per cent, of £2,500 divided by the total number of pairs of boots distributed (not pairs produced); or would be ⅖ *of commercial cost*. Messrs. Robinson, therefore, in respect of £2,500 of retail invoices turned in by them (which would include their own labour and commission) would be credited with 60 per cent. of that sum against the cheque originally sent them (out of which they paid Messrs. Brown) recovering the remaining 40 per cent, from the actual purchasers of the boots, and reimbursing the Clearing-house; who after balancing Messrs. Robinson's account would write *down* their own credits by that amount. This would leave the credit-capital of the community--that is to say, the financial estimate of potential capacity to deliver goods--written up by 60 per cent, of £2,500, which is an accounting reflection of the actual situation.
+Let us assume that in a given credit area the sum involved in the delivery of boots to the user per month amounts to £2,500, that is to say, the *cost* figures of the retail invoices turned into the Clearing-house per month total that sum. This means that services have been rendered and remunerated by the payment over an indefinite period of the token value of £2,500, and the product of these services distributed in one month. But the token value has a general purchasing power, consequently, it should be set against a general value. The general value is equal to the general rate of depreciation, or if it be preferred, consumption of the whole of the goods which can be bought with the token value. Let us assume this to be 40 per cent., that is to say, let us imagine that of the total work of the community for one month 60 per cent, remains for use during a subsequent period. Then the selling price of a pair of boots would be equal to 40 per cent, of £2,500 divided by the total number of pairs of boots distributed (not pairs produced); or would be ⅖ *of commercial cost*. Messrs. Robinson, therefore, in respect of £2,500 of retail invoices turned in by them (which would include their own labour and commission) would be credited with 60 per cent. of that sum against the cheque originally sent them (out of which they paid Messrs. Brown) recovering the remaining 40 per cent, from the actual purchasers of the boots, and reimbursing the Clearing-house; who after balancing Messrs. Robinson's account would write *down* their own credits by that amount. This would leave the credit-capital of the community--that is to say, the financial estimate of potential capacity to deliver goods--written up by 60 per cent, of £2,500, which is an accounting reflection of the actual situation.
 
 From this point of view, all semi-manufactures become simply a form of tool power, and are subject to the same treatment as manufacturing plant; they are a form of capital assets to be depreciated and written down from time to time. There is absolutely no difference in principle between the treatment in this manner of a tool which wears out in five years' time and a unit of energy which is dissipated in a few minutes in driving the tool.
 
