--- a/src/napoleon-notting/01-01.md
+++ b/src/napoleon-notting/01-01.md
@@ -12,7 +12,7 @@ Thus, for instance, there were Mr. H. G. Wells and others, who thought that scie
 
 Then there was the opposite school. There was Mr. Edward Carpenter, who thought we should in a very short time return to Nature, and live simply and slowly as the animals do. And Edward Carpenter was followed by James Pickie, D.D. (of Pocahontas College), who said that men were immensely improved by grazing, or taking their food slowly and continuously, after the manner of cows. And he said that he had, with the most encouraging results, turned city men out on all fours in a field covered with veal cutlets. Then Tolstoy and the Humanitarians said that the world was growing more merciful, and therefore no one would ever desire to kill. And Mr. Mick not only became a vegetarian, but at length declared vegetarianism doomed ("shedding," as he called it finely, "the green blood of the silent animals"), and predicted that men in a better age would live on nothing but salt. And then came the pamphlet from Oregon (where the thing was tried), the pamphlet called "Why should Salt suffer?" and there was more trouble.
 
-![city men out on all fours in a field covered with veal cutlets](napoleon-notting/CityMen.png)
+![city men out on all fours in a field covered with veal cutlets](CityMen.png)
 
 And on the other hand, some people were predicting that the lines of kinship would become narrower and sterner. There was Mr. Cecil Rhodes, who thought that the one thing of the future was the British Empire, and that there would be a gulf between those who were of the Empire and those who were not, between the Chinaman in Hong Kong and the Chinaman outside, between the Spaniard on the Rock of Gibraltar and the Spaniard off it, similar to the gulf between man and the lower animals. And in the same way his impetuous friend, Dr. Zoppi ("the Paul of Anglo-Saxonism"), carried it yet further, and held that, as a result of this view, cannibalism should be held to mean eating a member of the Empire, not eating one of the subject peoples, who should, he said, be killed without needless pain. His horror at the idea of eating a man in British Guiana showed how they misunderstood his stoicism who thought him devoid of feeling. He was, however, in a hard position; as it was said that he had attempted the experiment, and, living in London, had to subsist entirely on Italian organ-grinders. And his end was terrible, for just when he had begun, Sir Paul Swiller read his great paper at the Royal Society, proving that the savages were not only quite right in eating their enemies, but right on moral and hygienic grounds, since it was true that the qualities of the enemy, when eaten, passed into the eater. The notion that the nature of an Italian organ-man was irrevocably growing and burgeoning inside him was almost more than the kindly old professor could bear.
 
