--- a/src/napoleon-notting/02-01.md
+++ b/src/napoleon-notting/02-01.md
@@ -62,7 +62,7 @@ He passed swiftly up a street in the neighbourhood of Notting Hill, when suddenl
 
 "I have a few notes," he said, "for my dying speech;" and he turned over the leaves. "Dying speech for political assassination; ditto, if by former friend--h'm, h'm. Dying speech for death at hands of injured husband (repentant). Dying speech for same (cynical). I am not quite sure which meets the present..."
 
-!["I'm King of the Castle"](napoleon-notting/KingCastle.png)
+!["I'm King of the Castle"](KingCastle.png)
 
 "I'm the King of the Castle," said the boy, truculently, and very pleased with nothing in particular.
 
