--- a/src/napoleon-notting/02-03.md
+++ b/src/napoleon-notting/02-03.md
@@ -14,7 +14,7 @@ The King flung himself back in his chair, and rubbed his hands.
 
 Mr. Buck made a bitter face, and James Barker's nostrils curled; Wilson began to giggle faintly, and the Provost of West Kensington followed in a smothered way. But the big blue eyes of Adam Wayne never changed, and he called out in an odd, boyish voice down the hall--
 
-!["I bring homage to my king"](napoleon-notting/BringHomage.png)
+!["I bring homage to my king"](BringHomage.png)
 
 "I bring homage to my King. I bring him the only thing I have--my sword."
 
