--- a/src/napoleon-notting/03-03.md
+++ b/src/napoleon-notting/03-03.md
@@ -82,7 +82,7 @@ Wayne bowed.
 
 All the men at the table rose to their feet; Wayne alone rose without excitement.
 
-"Have I, then," he said, "your Majesty's per- mission to depart? I have given my last answer."
+"Have I, then," he said, "your Majesty's permission to depart? I have given my last answer."
 
 "You have it," said Auberon, smiling, but not lifting his eyes from the table. And amid a dead silence the Provost of Notting Hill passed out of the room.
 
@@ -92,7 +92,7 @@ Barker shook his head desperately.
 
 "The man ought to be in an asylum," he said. "But one thing is clear, we need not bother further about him. The man can be treated as mad."
 
-"Of course," said Buck, turning to him with sombre decisiveness. "You're perfectly right, Barker. He is a good enough fellow, but he can be treated as mad. Let's put it in simple form. Go and tell any twelve men in any town, go and tell any doctor in any town, that there is a man offered fifteen hundred pounds for a thing he could sell commonly for four hundred, and that when asked for a reason for not accepting it he pleads the inviolate sanctity of Notting Hill and calls it the Holy Mountain. What would they say? What more can we have on our side than the common- sense of everybody? On what else do all laws rest? I'll tell you, Barker, what's better than any further discussion. Let's send in workmen on the spot to pull down Pump Street. And if old Wayne says a word, arrest him as a lunatic. That's all."
+"Of course," said Buck, turning to him with sombre decisiveness. "You're perfectly right, Barker. He is a good enough fellow, but he can be treated as mad. Let's put it in simple form. Go and tell any twelve men in any town, go and tell any doctor in any town, that there is a man offered fifteen hundred pounds for a thing he could sell commonly for four hundred, and that when asked for a reason for not accepting it he pleads the inviolate sanctity of Notting Hill and calls it the Holy Mountain. What would they say? What more can we have on our side than the common-sense of everybody? On what else do all laws rest? I'll tell you, Barker, what's better than any further discussion. Let's send in workmen on the spot to pull down Pump Street. And if old Wayne says a word, arrest him as a lunatic. That's all."
 
 Barker's eyes kindled.
 
@@ -208,7 +208,7 @@ The King stopped, with his cigar lifted, for there had slid into his eyes the st
 
 "Beaten," said the politician--"beaten all to hell!" And he plunged past with nostrils shaking like a horse's, and more and more men plunged after him.
 
-Almost as he spoke, the last standing strip of fence bowed and snapped, flinging, as from a catapult, a new figure upon the road. He wore the flaming red of the halberdiers of Notting Hill, and on his weapon there was blood, and in his face victory. In another moment masses of red glowed through the gaps of the fence, and the pursuers, with their halberds, came pouring down the lane. Pursued and pur- suers alike swept by the little figure with the owlish eyes, who had not taken his hands out of his pockets.
+Almost as he spoke, the last standing strip of fence bowed and snapped, flinging, as from a catapult, a new figure upon the road. He wore the flaming red of the halberdiers of Notting Hill, and on his weapon there was blood, and in his face victory. In another moment masses of red glowed through the gaps of the fence, and the pursuers, with their halberds, came pouring down the lane. Pursued and pursuers alike swept by the little figure with the owlish eyes, who had not taken his hands out of his pockets.
 
 The King had still little beyond the confused sense of a man caught in a torrent--the feeling of men eddying by. Then something happened which he was never able afterwards to describe, and which we cannot describe for him. Suddenly in the dark entrance, between the broken gates of a garden, there appeared framed a flaming figure.
 
